Refactor EntryLoaderTest: replace get() with getFirst() for improved readability and consistency